--- a/busybox-configs/0.config
+++ b/busybox-configs/0.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.24.1
-# Sun Feb 28 16:43:08 2016
+# Sun Feb 28 22:39:28 2016
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -57,7 +57,7 @@ CONFIG_FEATURE_HAVE_RPC=y
 #
 # Build Options
 #
-CONFIG_STATIC=y
+# CONFIG_STATIC is not set
 # CONFIG_PIE is not set
 # CONFIG_NOMMU is not set
 # CONFIG_BUILD_LIBBUSYBOX is not set
