--- a/etc/modprobe.d/rtl8723be.conf
+++ b/etc/modprobe.d/rtl8723be.conf
@@ -1,1 +1,2 @@
-options rtl8723be swenc=1 ips=0 fwlps=0 ant_sel=2
+# resolves connectivity issues on HP Stream
+options rtl8723be aspm=0 ips=0 fwlps=0 ant_sel=2
