--- a/etc/modprobe.d/rtl8723be.conf
+++ b/etc/modprobe.d/rtl8723be.conf
@@ -1,2 +1,2 @@
-# resolves connectivity issues on HP Stream by turning of power saving
+# disables power saving functions
 options rtl8723be aspm=0 ips=0 fwlps=0
