--- a/etc/skel/dconf.ini
+++ b/etc/skel/dconf.ini
@@ -17,18 +17,23 @@ window-size=(990, 776)
 
 [org/xfce/mousepad/preferences/view]
 auto-indent=true
-color-scheme='none'
+color-scheme='solarized-dark'
+font-name='Monospace 14'
 highlight-current-line=true
 insert-spaces=true
 match-braces=true
 show-line-endings=true
 show-line-numbers=true
+show-right-margin=true
 show-whitespace=true
 smart-backspace=true
 tab-width=uint32 4
+use-default-monospace-font=false
 
 [org/xfce/mousepad/preferences/window]
+menubar-visible=false
 opening-mode='window'
+toolbar-visible=false
 
 [org/xfce/mousepad/state/window]
 fullscreen=false
